@@ -79,7 +79,6 @@ b.cavanagh@jach.hawaii.edu
 
 =cut
 
-sub cosdeg { cos($_[0] * 3.14159265359 / 180); }
 
 # No need to bother if this is a pair reduction and we dont yet have
 # a pair. Proceed regardless for non-pair reduction
