@@ -79,9 +79,6 @@ b.cavanagh@jach.hawaii.edu
 
 =cut
 
-# Cosine for angles measured in degrees.
-    sub cosdeg { cos($_[0] * 3.14159265359 / 180 ); }
-
 # Validation
 # ==========
 # No need to bother if this is a pair reduction and we don't yet have
