@@ -1,3 +1,7 @@
+2001-05-17  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* General.pm: Add cosdeg. Move it from primitives
+
 2001-05-04  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Basic.pm (orac_exit_normally): Realise that \a can be used for beep.
